tree changes for pdf files

--- a/conar.html
+++ b/conar.html
@@ -50,7 +50,7 @@ Below is a table of the models I have run across. If you know of one I missed, p
   <td align="center" data-type="Year"></td>
   <td align="left" data-type="Description">Appliance Tester</td>
   <td align="center" data-type="Image"><img src="images/model_200.jpg"style="width: 80px; height: 60px;" alt="Conar Model 200" /></td>  
-  <td align="center"><a href="model_200schem.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a></td> 
+  <td align="center"><a href="pdf/model_200schem.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a></td> 
   <td align="center" data-type="Notes"></td> 
   </tr>
  <tr>
@@ -67,8 +67,8 @@ Below is a table of the models I have run across. If you know of one I missed, p
   <td align="left">CMOS Frequency Counter</td>
   <td align="center"><img src="images/model_202.jpg"style="width: 80px; height: 60px;" alt="Conar Model 202" /></td>  
   <td align="center">
-        <a href="model_202.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a>
-        <a href="model_202schem.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a></td>  
+        <a href="pdf/model_202.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a>
+        <a href="pdf/model_202schem.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a></td>  
   <td align="center">Special thanks to AD2CS for the scans.</td> 
   </tr>
  <tr>
@@ -76,7 +76,7 @@ Below is a table of the models I have run across. If you know of one I missed, p
   <td align="center"></td>
   <td align="left">Volt/Ohm Meter, 6X4 vacuum tube</td>
   <td align="center"><img src="images/model_211.jpg"style="width: 80px; height: 60px;" alt="Conar Model 211" /></td>  
-  <td align="center"><a href="model_211.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a></td>  
+  <td align="center"><a href="pdf/model_211.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a></td>  
   <td align="center"></td> 
   </tr>
  <tr>
@@ -84,7 +84,7 @@ Below is a table of the models I have run across. If you know of one I missed, p
   <td align="center"></td>
   <td align="left">Volt/Ohm Meter, transistorized</td>
   <td align="center"><img src="images/model_212.jpg"style="width: 80px; height: 60px;" alt="Conar Model 212" /></td>  
-  <td align="center"><a href="model_212.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a></td>  
+  <td align="center"><a href="pdf/model_212.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a></td>  
   <td align="center"></td> 
   </tr>
  <tr>
@@ -116,7 +116,7 @@ Below is a table of the models I have run across. If you know of one I missed, p
   <td align="center"></td>
   <td align="left">Tube Tester</td>
   <td align="center"><img src="images/model_223.jpg"style="width: 80px; height: 60px;" alt="Conar Model 223" /></td>  
-  <td align="center"><a href="model_223.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a></td>  
+  <td align="center"><a href="pdf/model_223.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a></td>  
   <td align="center">"The Barbarian"</td> 
   </tr>
  <tr>
@@ -124,8 +124,8 @@ Below is a table of the models I have run across. If you know of one I missed, p
   <td align="center"></td>
   <td align="left">Tube Tester</td>
   <td align="center"><img src="images/model_224.jpg"style="width: 80px; height: 60px;" alt="Conar Model 224" /></td>  
-  <td align="center"><a href="model_224.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a>
-  <a href="model_224schem.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a>
+  <td align="center"><a href="pdf/model_224.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a>
+  <a href="pdf/model_224schem.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a>
   </td>  
   <td align="center"><a href="https://www.youtube.com/watch?v=pbMnftCagvA"</a>Review Video</td> 
   </tr>
@@ -142,7 +142,7 @@ Below is a table of the models I have run across. If you know of one I missed, p
   <td align="center">1961</td>
   <td align="left">Signal Tracer <br>(Range: 170kHz-500kHz and 500kHz-1500khz)</td>
   <td align="center"><img src="images/model_230.jpg"style="width: 80px; height: 60px;" alt="Conar Model 230" /></td>  
-  <td align="center"><a href="model_230.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a></td>  
+  <td align="center"><a href="pdf/model_230.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a></td>  
   <td align="center"><a href="https://www.youtube.com/watch?v=SRC5qPhQVdQ">Review video</a></td> 
   </tr>
  <tr>
@@ -150,7 +150,7 @@ Below is a table of the models I have run across. If you know of one I missed, p
   <td align="center"></td>
   <td align="left">Tuned Signal Tracer</td>
   <td align="center"><img src="images/model_231.jpg"style="width: 80px; height: 60px;" alt="Conar Model 231" /></td>
-  <td align="center"><a href="model_231.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a><a href="model_231schem.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a></td>  
+  <td align="center"><a href="pdf/model_231.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a><a href="pdf/model_231schem.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a></td>  
   <td align="center">Special thanks to AD2CS for the scans.</td> 
   </tr>
  <tr>
@@ -166,7 +166,7 @@ Below is a table of the models I have run across. If you know of one I missed, p
   <td align="center">1961</td>
   <td align="left">Oscilloscope</td>
   <td align="center"><img src="images/model_250.jpg"style="width: 80px; height: 60px;" alt="Conar Model 250" /></td>  
-  <td align="center"><a href="model_250.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a><a href="model_250schem.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a></td>  
+  <td align="center"><a href="pdf/model_250.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a><a href="pdf/model_250schem.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a></td>  
   <td align="center"></td> 
   </tr>
  <tr>
@@ -174,7 +174,7 @@ Below is a table of the models I have run across. If you know of one I missed, p
   <td align="center"></td>
   <td align="left">Oscilloscope</td>
   <td align="center"><img src="images/model_251.jpg"style="width: 80px; height: 60px;" alt="Conar Model 251" /></td>  
-  <td align="center"><a href="model_251_operating.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a><a href="model_251_assembly_using.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a></td>  
+  <td align="center"><a href="pdf/model_251_operating.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a><a href="pdf/model_251_assembly_using.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a></td>  
   <td align="center">Special thanks to W2RIK for the scans.</td> 
   </tr>
  <tr>
@@ -182,7 +182,7 @@ Below is a table of the models I have run across. If you know of one I missed, p
   <td align="center"></td>
   <td align="left">Oscilloscope</td>
   <td align="center"><img src="images/model_255.jpg"style="width: 80px; height: 60px;" alt="Conar Model 255" /></td>  
-  <td align="center"><a href="model_255.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a></td>  
+  <td align="center"><a href="pdf/model_255.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a></td>  
   <td align="center"></td> 
   </tr>
  <tr>
@@ -199,8 +199,8 @@ Below is a table of the models I have run across. If you know of one I missed, p
   <td align="left">Signal Generator</td>
   <td align="center"><img src="images/model_280.jpg"style="width: 80px; height: 60px;" alt="Conar Model 280" /></td>  
   <td align="center">
-      <a href="model_280.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a>
-      <a href="model_280schem.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a></td>  
+      <a href="pdf/model_280.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a>
+      <a href="pdf/model_280schem.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a></td>  
   <td align="center"><a href="https://www.youtube.com/watch?v=sWl1w1Y8Rps">Review Video</a></td> 
   </tr>
  <tr>
@@ -232,7 +232,7 @@ Below is a table of the models I have run across. If you know of one I missed, p
   <td align="center">1961</td>
   <td align="left">R/C Tester</td>
   <td align="center"><img src="images/model_311.jpg"style="width: 80px; height: 60px;" alt="Conar Model 311" /></td>  
-  <td align="center"><a href="model_311.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a></td>  
+  <td align="center"><a href="pdf/model_311.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a></td>  
   <td align="center"></td> 
   </tr>
  <tr>
@@ -240,7 +240,7 @@ Below is a table of the models I have run across. If you know of one I missed, p
   <td align="center"></td>
   <td align="left">Regulated Power Supply</td>
   <td align="center"><img src="images/model_320.jpg"style="width: 80px; height: 60px;" alt="Conar Model 320" /></td>  
-  <td align="center"><a href="model_320.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a></td>  
+  <td align="center"><a href="pdf/model_320.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a></td>  
   <td align="center">Special thanks to William Burg for the scans.</td> 
   </tr>
  <tr>
@@ -248,10 +248,10 @@ Below is a table of the models I have run across. If you know of one I missed, p
   <td align="center">1964</td>
   <td align="left">Novice CW Transmitter for 80m, 40m, 15m, crystal<br>controlled. 15-25w output, chirpy.<br>AKA: "Kit 3r"</td>
   <td align="center"><img src="images/model_400.jpg"style="width: 80px; height: 60px;" alt="Conar Model 400" /></td>  
-  <td align="center"><a href="model_400.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a></td>  
+  <td align="center"><a href="pdf/model_400.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a></td>  
   <td align="center">
   <a href="http://www.hamuniverse.com/w4jbm/conar.html">W4JBM's Conar Twins Page</a><br>
-  <a href="model_400_mods.html">Transmitter Modifications</a><br>
+  <a href="pdf/model_400_mods.html">Transmitter Modifications</a><br>
   <a href="https://www.youtube.com/watch?v=teX4tgqGYg4">Video Review</a>
   </td> 
   </tr>
@@ -268,7 +268,7 @@ Below is a table of the models I have run across. If you know of one I missed, p
   <td align="center"></td>
   <td align="left">2m FM Transceiver</td>
   <td align="center"><img src="images/model_452.jpg"style="width: 80px; height: 60px;" alt="Conar Model 452" /></td>  
-  <td align="center"><a href="model_452.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a><a href="model_452op.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a></td>  
+  <td align="center"><a href="pdf/model_452.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a><a href="pdf/model_452op.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a></td>  
   <td align="center"></td> 
   </tr>
  <tr>
@@ -276,10 +276,10 @@ Below is a table of the models I have run across. If you know of one I missed, p
   <td align="center">1964</td>
   <td align="left">Novice AM/CW Receiver for 80m, 40m, 15m<BR>Could also receive SSB in CW mode.<br>AKA: "Kit 2r"</td>
   <td align="center"><img src="images/model_500.jpg" style="width: 80px; height: 60px;" alt="Conar Model 500" /></td>  
-  <td align="center"><a href="model_500.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a></td>  
+  <td align="center"><a href="pdf/model_500.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a></td>  
   <td align="center">
   <a href="http://www.hamuniverse.com/w4jbm/conar.html">W4JBM's Conar Twins Page</a><br>
-  <a href="model_500_mods.html">Receiver Modifications</a>
+  <a href="pdf/model_500_mods.html">Receiver Modifications</a>
   </td> 
   </tr>
  <tr>
@@ -327,7 +327,7 @@ Below is a table of the models I have run across. If you know of one I missed, p
   <td align="center"></td>
   <td align="left">3.5 digit, 1/2" display, digital LCD multimeter</td>
   <td align="center"><img src="images/model_1400.jpg"style="width: 50px; height: 60px;" alt="Conar Model 1400" /></td>
-  <td align="center"><a href="model_1400.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a></td>
+  <td align="center"><a href="pdf/model_1400.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a></td>
   <td align="center">
 	Thanks to Mark Burelle<br>
 	<img src="images/model_1400a.jpg"style="width: 40px; height: 30px;" alt="Conar Model 1400" />
