--- a/conar.html
+++ b/conar.html
@@ -134,7 +134,7 @@ Below is a table of the models I have run across. If you know of one I missed, p
   <td align="center"></td>
   <td align="left">Tube Tester Data</td>
   <td align="center"></td>  
-  <td align="center"><a href="conar_224_tube_tester_tube_data.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a></td>  
+  <td align="center"><a href="pdf/conar_224_tube_tester_tube_data.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a></td>  
   <td align="center"></td> 
   </tr>
  <tr>
@@ -251,7 +251,7 @@ Below is a table of the models I have run across. If you know of one I missed, p
   <td align="center"><a href="pdf/model_400.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a></td>  
   <td align="center">
   <a href="http://www.hamuniverse.com/w4jbm/conar.html">W4JBM's Conar Twins Page</a><br>
-  <a href="pdf/model_400_mods.html">Transmitter Modifications</a><br>
+  <a href="model_400_mods.html">Transmitter Modifications</a><br>
   <a href="https://www.youtube.com/watch?v=teX4tgqGYg4">Video Review</a>
   </td> 
   </tr>
@@ -279,7 +279,7 @@ Below is a table of the models I have run across. If you know of one I missed, p
   <td align="center"><a href="pdf/model_500.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a></td>  
   <td align="center">
   <a href="http://www.hamuniverse.com/w4jbm/conar.html">W4JBM's Conar Twins Page</a><br>
-  <a href="pdf/model_500_mods.html">Receiver Modifications</a>
+  <a href="model_500_mods.html">Receiver Modifications</a>
   </td> 
   </tr>
  <tr>
@@ -341,11 +341,11 @@ Below is a table of the models I have run across. If you know of one I missed, p
  <tr><td span=2 align="center"width=256><b>Conar Catalogs</b></td></tr>
 	<tr>
 	<td align="center"width=256><b>1966 Catalog</b></td>
-	<td align="center"width=64><a href="catalog_1966.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a></td>
+	<td align="center"width=64><a href="pdf/catalog_1966.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a></td>
 	</tr>
 	<tr>
 	<td align="center"width=256><b>1967 Catalog</b></td>
-	<td align="center"width=64><a href="catalog_1967.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a></td>
+	<td align="center"width=64><a href="pdf/catalog_1967.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a></td>
 	</tr>
  </tr>
 </table><br>
@@ -353,7 +353,7 @@ Below is a table of the models I have run across. If you know of one I missed, p
  <tr><td span=2 align="center"width=256><b>NRI Journals</b></td></tr>
  <tr>
   <td align="center"width=256><b>10 September 1967</b></td>
-  <td align="center"width=64><a href="journal_1967-09-10.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a>
+  <td align="center"width=64><a href="pdf/journal_1967-09-10.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a>
   </td>
  </tr>
 </table><br>
@@ -372,4 +372,5 @@ document.getElementById("demo").innerHTML = document.lastModified;
 </script>
 </table>
 </body>
+
 </html>
