--- a/conar.html
+++ b/conar.html
@@ -223,7 +223,7 @@ Below is a table of the models I have run across. If you know of one I missed, p
   <td align="center">292</td>
   <td align="center"></td>
   <td align="left">Intercom Kit</td>
-  <td align="center"><img src="images/model_281.jpg"style="width: 80px; height: 60px;" alt="Conar Model 281" /></td>  
+  <td align="center"></td>  
   <td align="center"></td>  
   <td align="center"></td> 
   </tr>
@@ -374,3 +374,4 @@ document.getElementById("demo").innerHTML = document.lastModified;
 </body>
 
 </html>
+
