--- a/conar.html
+++ b/conar.html
@@ -251,7 +251,7 @@ Below is a table of the models I have run across. If you know of one I missed, p
   <td align="center"><a href="pdf/model_400.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a></td>  
   <td align="center">
   <a href="http://www.hamuniverse.com/w4jbm/conar.html">W4JBM's Conar Twins Page</a><br>
-  <a href="model_400_mods.html">Transmitter Modifications</a><br>
+  <!-- <a href="model_400_mods.html">Transmitter Modifications</a><br> -->
   <a href="https://www.youtube.com/watch?v=teX4tgqGYg4">Video Review</a>
   </td> 
   </tr>
@@ -374,4 +374,5 @@ document.getElementById("demo").innerHTML = document.lastModified;
 </body>
 
 </html>
+
 
