more files provided by AD2CS

--- a/conar.html
+++ b/conar.html
@@ -25,9 +25,12 @@ Below is a table of the models I have run across. If you know of one I missed, p
 <table align="center" width=1030 border=1>
 <tr><td align="center"><b>------------------- UPDATE Log -------------------</b></tr>
 <tr><td>
-<p><br><ul>
-<li>UPDATE 22AUG2023: New manuals and schematics provided for the Model 202 CMOS Frequency Counter.</li>
-<li>UPDATE 21AUG2023: New manuals and schematics provided for the Model 231 Tuned Signal Tracer.</li>
+<p><br>
+<ul>
+	<li>UPDATE 25 OCT 2023: New manuals and schematics provided for the Model 211 VTVM</li>	
+	<li>UPDATE 15 OCT 2023: New manuals and schematics provided for the Model 214 Transistor Checker</li>	
+	<li>UPDATE 22 AUG 2023: New manuals and schematics provided for the Model 202 CMOS Frequency Counter.</li>
+	<li>UPDATE 21 AUG 2023: New manuals and schematics provided for the Model 231 Tuned Signal Tracer.</li>
 </ul>
 <br></p>
 </td></tr>
@@ -76,8 +79,10 @@ Below is a table of the models I have run across. If you know of one I missed, p
   <td align="center"></td>
   <td align="left">Volt/Ohm Meter, 6X4 vacuum tube</td>
   <td align="center"><img src="images/model_211.jpg"style="width: 80px; height: 60px;" alt="Conar Model 211" /></td>  
-  <td align="center"><a href="pdf/model_211.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a></td>  
-  <td align="center"></td> 
+  <td align="center"><a href="pdf/model_211.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a></td>   
+  <td align="center"><a href="pdf/model_211schem.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a></td>  
+  <td align="center"><a href="pdf/model_211howto.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a></td>  
+  <td align="center">Special thanks to AD2CS for the scans.</td> 
   </tr>
  <tr>
   <td align="center">212</td>
@@ -92,8 +97,9 @@ Below is a table of the models I have run across. If you know of one I missed, p
   <td align="center"></td>
   <td align="left">Transistor Checker</td>
   <td align="center"><img src="images/model_214.jpg"style="width: 80px; height: 60px;" alt="Conar Model 214" /></td>  
-  <td align="center"></td>  
-  <td align="center">Easily confused with the model 212</td> 
+  <td align="center"><a href="pdf/model_214.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a></td>    
+  <td align="center"><a href="pdf/model_214schem.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a></td>
+  <td align="center">Easily confused with the model 212, Special thanks to AD2CS for the scans.</td> 
   </tr>
  <tr>
   <td align="center">220</td>
@@ -374,5 +380,6 @@ document.getElementById("demo").innerHTML = document.lastModified;
 </body>
 
 </html>
+
 
 
