--- a/conar.html
+++ b/conar.html
@@ -79,9 +79,10 @@ Below is a table of the models I have run across. If you know of one I missed, p
   <td align="center"></td>
   <td align="left">Volt/Ohm Meter, 6X4 vacuum tube</td>
   <td align="center"><img src="images/model_211.jpg"style="width: 80px; height: 60px;" alt="Conar Model 211" /></td>  
-  <td align="center"><a href="pdf/model_211.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a></td>   
-  <td align="center"><a href="pdf/model_211schem.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a></td>  
-  <td align="center"><a href="pdf/model_211howto.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a></td>  
+  <td align="center">
+	  <a href="pdf/model_211.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a>   
+      <a href="pdf/model_211schem.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a>
+      <a href="pdf/model_211howto.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a></td>  
   <td align="center">Special thanks to AD2CS for the scans.</td> 
   </tr>
  <tr>
@@ -97,9 +98,10 @@ Below is a table of the models I have run across. If you know of one I missed, p
   <td align="center"></td>
   <td align="left">Transistor Checker</td>
   <td align="center"><img src="images/model_214.jpg"style="width: 80px; height: 60px;" alt="Conar Model 214" /></td>  
-  <td align="center"><a href="pdf/model_214.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a></td>    
-  <td align="center"><a href="pdf/model_214schem.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a></td>
-  <td align="center">Easily confused with the model 212, Special thanks to AD2CS for the scans.</td> 
+  <td align="center">
+	  <a href="pdf/model_214.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a>
+      <a href="pdf/model_214schem.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a></td>
+  <td align="center">Easily confused with the model 212, <br>Special thanks to AD2CS for the scans.</td> 
   </tr>
  <tr>
   <td align="center">220</td>
@@ -380,6 +382,7 @@ document.getElementById("demo").innerHTML = document.lastModified;
 </body>
 
 </html>
+
 
 
 
