more delete of duplicates

--- a/conar.html
+++ b/conar.html
@@ -27,6 +27,7 @@ Below is a table of the models I have run across. If you know of one I missed, p
 <tr><td>
 <p><br>
 <ul>
+	<li>UPDATE 21 JAN 2026: All files and hosting moved to github.io from QSL.net. Allows for collaboration!</li>
 	<li>UPDATE 25 OCT 2023: New manuals and schematics provided for the Model 211 VTVM</li>	
 	<li>UPDATE 15 OCT 2023: New manuals and schematics provided for the Model 214 Transistor Checker</li>	
 	<li>UPDATE 22 AUG 2023: New manuals and schematics provided for the Model 202 CMOS Frequency Counter.</li>
