newsite message and image

--- a/conar.html
+++ b/conar.html
@@ -10,17 +10,28 @@
 </head>
 <body>
 <div style="text-align: center; ">
-<table align="center" width=1030>
-<tr><td align="center"><img src="images/cis_logo.png" /></td></tr>
+	<table align="center" width=1030>
+		<tr><td align="center"><img src="images/newsite.png" /></td></tr>
+		<tr><td align="center"><img src="images/cis_logo.png" /></td></tr>
 
 
-<tr><td align="justified">
-The Conar Instruments Company of Washington, D.C. was a comparative latecomer to the kit business, since it first offered kits in 1962; yet it was not new in the electronics field. Conar was an expansion of the National Radio Institute's student supply division that functioned primarily to supply test equipment to NRI students and graduates. In fact, the name 'Conar' is rather tortuously derived from the first letters of '<b>CO</b>mpany, <b>NA</b>tional <b>R</b>adio.' Conar was able to enter the market with a complete series of radio-TV test-equipment kits of proven design that had already been developed by NRI's technical staff. These were primarily kits, assembled and tested by the students (UK - Unassembled Kit) as part of NRI's many home-study training courses. Some models were also available assembled from the factory (WT - Wired and Tested). Many of the models were also sold under the NRI Professional label.<br><br>
-</td></tr><tr><td align="justified"><HR>
-Below is a table of the models I have run across. If you know of one I missed, please let me know. Please donate PDF scans of your manuals, schematics, catalogs and advertising. If you do not have the ability to provide a PDF scan, we can scan them for you and return your originals very quickly, at no charge. Much of the information shown here was gleamed from the internet (and it is always right!.. right?) If you have more accurate information on anything here, again... let me know via timothy.f.johnston(at)gmail.com<br><br>
-</td></tr><tr><td align="justified">
-<i>PS: This is a work in progress as I attempt to locate manuals and update descriptions.</i>
-</td></tr></table>
+		<tr>
+			<td align="justified">
+				The Conar Instruments Company of Washington, D.C. was a comparative latecomer to the kit business, since it first offered kits in 1962; yet it was not new in the electronics field. Conar was an expansion of the National Radio Institute's student supply division that functioned primarily to supply test equipment to NRI students and graduates. In fact, the name 'Conar' is rather tortuously derived from the first letters of '<b>CO</b>mpany, <b>NA</b>tional <b>R</b>adio.' Conar was able to enter the market with a complete series of radio-TV test-equipment kits of proven design that had already been developed by NRI's technical staff. These were primarily kits, assembled and tested by the students (UK - Unassembled Kit) as part of NRI's many home-study training courses. Some models were also available assembled from the factory (WT - Wired and Tested). Many of the models were also sold under the NRI Professional label.<br><br>
+			</td>
+		</tr>
+		<tr>
+			<td align="justified">
+				<HR>
+				Below is a table of the models I have run across. If you know of one I missed, please let me know. Please donate PDF scans of your manuals, schematics, catalogs and advertising. If you do not have the ability to provide a PDF scan, we can scan them for you and return your originals very quickly, at no charge. Much of the information shown here was gleamed from the internet (and it is always right!.. right?) If you have more accurate information on anything here, again... let me know via timothy.f.johnston(at)gmail.com<br><br>
+			</td>
+		</tr>
+		<tr>
+			<td align="justified">
+				<i>PS: This is a work in progress as I attempt to locate manuals and update descriptions.</i>
+			</td>
+		</tr>
+	</table>
 <br><br>
 <table align="center" width=1030 border=1>
 <tr><td align="center"><b>------------------- UPDATE Log -------------------</b></tr>
