remove external "known links"

--- a/index.html
+++ b/index.html
@@ -377,7 +377,8 @@
                     <td align="center" width=64><a href="pdf/catalog_1967.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a></td>
                 </tr>
 
-            </table><br>
+            </table>
+            <br>
             <table border=1 align="center" cellpadding=2 cellspacing=2>
                 <tr><td span=2 align="center" width=256><b>NRI Journals</b></td></tr>
                 <tr>
@@ -386,15 +387,9 @@
                         <a href="pdf/journal_1967-09-10.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a>
                     </td>
                 </tr>
-            </table><br>
+            </table>
         </p>
-    </div><h2>Known Links</h2><ul>
-        <li><a href="http://www.radiomuseum.org/dsp_hersteller_detail.cfm?company_id=7765">RadioMuseum.Org</a>
-        <li><a href="http://en.wikipedia.org/wiki/Conar_Instruments">Wikipedia.Org</a>
-        <li>
-    </ul>
-    <a href="http://www.americanradiohistory.com/National_Radio_News.htm">National Radio News Magazines</a>
-
+    </div>
     <hr>
     <table width="50%" align="center">
         <tr>
