--- a/index.html
+++ b/index.html
@@ -278,7 +278,8 @@
                     <td align="center"><img src="images/model_400.jpg" style="width: 80px; height: 60px;" alt="Conar Model 400" /></td>
                     <td align="center"><a href="pdf/model_400.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a></td>
                     <td align="center">
-                        <a href="http://www.hamuniverse.com/w4jbm/conar.html">W4JBM's Conar Twins Page</a><br>
+                        <a href="http://www.hamuniverse.com/w4jbm/conar.html">W4JBM's Conar Twins page</a><br>
+                        <a href="https://www.k3msb.com/Conar_Twins/main.html">K3MSB's Conar Twins page</a><br>
                         <a href="model_400_mods.html">Transmitter Modifications</a><br>
                         <a href="https://www.youtube.com/watch?v=teX4tgqGYg4">Video Review</a>
                     </td>
@@ -306,7 +307,8 @@
                     <td align="center"><img src="images/model_500.jpg" style="width: 80px; height: 60px;" alt="Conar Model 500" /></td>
                     <td align="center"><a href="pdf/model_500.pdf"><img src="images/pdf.png" style="width: 30px; height: 40px;"></a></td>
                     <td align="center">
-                        <a href="http://www.hamuniverse.com/w4jbm/conar.html">W4JBM's Conar Twins Page</a><br>
+                        <a href="http://www.hamuniverse.com/w4jbm/conar.html">W4JBM's Conar Twins page</a><br>
+                        <a href="https://www.k3msb.com/Conar_Twins/main.html">K3MSB's Conar Twins page</a><br>
                         <a href="model_500_mods.html">Receiver Modifications</a>
                     </td>
                 </tr>
